@startuml
'https://plantuml.com/class-diagram

class Game
Abstract class PropFactory{
    - {static}LocationX:int
    - {static}LocationY:int

    + summonProp(int locationX,int locationY):Prop
    + getLocationX():int
    + getLocationY():int
    + createProp():Prop
}
Abstract class Prop{
    + Props(int locationX,int locationY,int speedX,int speedY)
    + getHp():int
    + forward():void
    + getType():int
}
class BloodFactory{
    + createProp():Prop
}
class BombFactory{
    + createProp():Prop
}
class BulletFactory{
    + createProp():Prop
}
class Blood{
    - hp: int
    - maxHp: int
    + Prop_Blood(int locationX, int locationY, int speedX, int speedY,int hp)
    + increaseHp():void
    +getHp() : int
    +getType():int
}
class Bomb{
    + Prop_Bomb(int locationX, int locationY, int speedX, int speedY)
    + getHp() : int
    + getType():int
}
class Bullet{
     + Prop_Fire(int locationX, int locationY, int speedX, int speedY)
     + getHp() : int
     + getType():int
}
Game..>PropFactory
Game..>Prop
Blood..|>Prop
Bomb..|>Prop
Bullet..|>Prop
BulletFactory..|>PropFactory
BloodFactory..|>PropFactory
BombFactory..|>PropFactory
BulletFactory..>Bullet
BloodFactory..>Blood
BombFactory..>Bomb
@enduml